--- a/web-cliente/index.html
+++ b/web-cliente/index.html
@@ -7,7 +7,7 @@
     <title>EMI Asistencia</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-gray-100 font-family-karla flex"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
